--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,73 +1,90 @@
 workflows:
-  ios-workflow:
+  unity-ios-workflow:
     name: Unity iOS Workflow
+    instance_type: mac_mini_m1
+    max_build_duration: 120
+    integrations:
+      app_store_connect: ZeefunDevKEY
     environment:
-      xcode: 14.3
-    
       ios_signing:
-        provisioning_profiles:
-          - profile: AnsP
-            environment_variable: ~/Library/MobileDevice/Provisioning Profiles/
-          - profile: AnsNP
-            environment_variable: ~/Library/MobileDevice/Provisioning Profiles/
-          - profile: AnsUP
-            environment_variable: ~/Library/MobileDevice/Provisioning Profiles/
-
+        distribution_type: app_store
+        bundle_identifier: com.zeefun.platinumslots
       groups:
-        - default
+        - unity_credentials
       vars:
-        BUNDLE_ID: "com.app.slotsgold"
-        XCODE_WORK: "slotsgold.xcodeproj"
-        XCODE_SCHEME: "slotsgold"
-
+        UNITY_VERSION: 2021.3.15f1
+        UNITY_VERSION_CHANGESET: e8e88683f834
+        BUILD_SCRIPT: BuildIos
+        UNITY_IOS_DIR: ios
+        XCODE_PROJECT: "Unity-iPhone.xcodeproj"
+        XCODE_SCHEME: "Unity-iPhone"
+        APP_STORE_APP_ID: 6450431900
+      cocoapods: default
     scripts:
-      - name: X
+      - name: Retrieve Used Unity Version
+        script: | 
+          UNITY_VERSION=$(echo $(sed -n '1p' ProjectSettings/ProjectVersion.txt) | cut -c 18-)
+          UNITY_VERSION_CHANGESET=$(echo $(sed -n '2p' ProjectSettings/ProjectVersion.txt) | cut -d "(" -f2 | cut -d ")" -f1 | xargs)
+          echo "UNITY_VERSION=$UNITY_VERSION" >> $CM_ENV
+          echo "UNITY_VERSION_CHANGESET=$UNITY_VERSION_CHANGESET" >> $CM_ENV
+          echo "UNITY_HOME=/Applications/Unity/Hub/Editor/${UNITY_VERSION}/Unity.app" >> $CM_ENV #to update the default Unity home.
+      - name: Install Unity version
+        script: |  
+         /Applications/Unity\ Hub.app/Contents/MacOS/Unity\ Hub -- --headless install --version $UNITY_VERSION --changeset $UNITY_VERSION_CHANGESET 
+         /Applications/Unity\ Hub.app/Contents/MacOS/Unity\ Hub -- --headless install-modules --version $UNITY_VERSION -m ios 
+      - name: Activate Unity License
         script: |
-          xcodebuild clean -project Unity-iPhone.xcodeproj -scheme UnityFramework -configuration Release
-          xcodebuild clean -project Unity-iPhone.xcodeproj -scheme Unity-iPhone -configuration Release
-          xcodebuild clean -project slotsgold.xcodeproj -scheme slotsgold -configuration Release
-      
-      - name: Delete derived data
-        script: rm -rf ~/Library/Developer/Xcode/DerivedData
-      
-     - name: Activate Unity license
-      script: #...
-    - name: Generate the Xcode project from Unity
-      script: | 
-        $UNITY_BIN -batchmode \
-          -quit \
-          -logFile \
-          -projectPath . \
-          -executeMethod BuildScript.BuildIos \
-          -nographics
-    - name: Set up code signing settings on Xcode project
-      script: | 
-        xcode-project use-profiles
-    - name: Set the build number
-      script: #...
-    - name: Build the project
-      script: | 
-        xcode-project build-ipa --project "$UNITY_IOS_DIR/$XCODE_PROJECT" --scheme "$XCODE_SCHEME"
-            
+          $UNITY_HOME/Contents/MacOS/Unity -batchmode -quit -logFile \
+            -serial ${UNITY_SERIAL?} \
+            -username ${UNITY_EMAIL?} \
+            -password ${UNITY_PASSWORD?}
+      - name: Generate the Xcode project from Unity
+        script: |
+          $UNITY_HOME/Contents/MacOS/Unity -batchmode -quit -logFile \
+            -quit \
+            -logFile \
+            -projectPath . \
+            -executeMethod BuildScript.$BUILD_SCRIPT \
+            -nographics
+      - name: Set up code signing settings on Xcode project
+        script: |
+          xcode-project use-profiles
+      - name: Build ipa for distribution
+        script: |
+          xcode-project build-ipa \
+            --project "$UNITY_IOS_DIR/$XCODE_PROJECT" \
+            --scheme "$XCODE_SCHEME"
     artifacts:
-      - ios_distribution.key
-      - ios_distribution.csr
       - build/ios/ipa/*.ipa
-      - /tmp/xcodebuild_logs/*.log
-      - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
       - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
     publishing:
+      scripts:
+        - name: Deactivate Unity License
+          script: | 
+            /Applications/Unity\ Hub.app/Contents/Frameworks/UnityLicensingClient_V1.app/Contents/MacOS/Unity.Licensing.Client \
+            --return-ulf \
+            --username ${UNITY_EMAIL?} \
+            --password ${UNITY_PASSWORD?}
+      email:
+        recipients:
+          - user_1@example.com
+          - user_2@example.com
+        notify:
+          success: true
+          failure: false
       app_store_connect:
-        api_key: $APP_STORE_CONNECT_PRIVATE_KEY
-        key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER
-        issuer_id: $APP_STORE_CONNECT_ISSUER_ID
-        submit_to_testflight: false
-        expire_build_submitted_for_review: true
-
+        auth: integration
+        #
+        # Configuration related to TestFlight (optional)
+        # Note: This action is performed during post-processing.
+        submit_to_testflight: true 
+        #
+        # Specify the names of beta tester groups that will get access 
+        # to the build once it has passed beta review.
         beta_groups:
-          - test 1
-          - test 2
-
+          - group name 1
+          - group name 2
+        #
+        # Configuration related to App Store (optional)
+        # Note: This action is performed during post-processing.
         submit_to_app_store: true
-        #cancel_previous_submissions: true
-        release_type: MANUAL
